<resources>
    <string name="app_name">Fitnessch</string>
    <string name="all_fitnessch">Fitnessch</string>
    <string name="all_logout">登出</string>
    <string name="all_main">主頁</string>
    <string name="all_calendar">歷史課表</string>
    <string name="all_date_schedule_meal">單日課表與菜單</string>
    <string name="all_add_new_schedule_meal">新增課表與菜單</string>
    <string name="all_profile">個人檔案</string>
    <string name="all_nav_title">Functions</string>
    <string name="all_schedule_title">健身課表</string>
    <string name="all_meal_title">飲食菜單</string>
    <string name="all_schedule_tag">課表</string>
    <string name="all_meal_tag">菜單</string>
    <string name="all_login_text">登入</string>
    <string name="all_sign_up_email">信箱</string>
    <string name="all_sign_up_password">密碼</string>
    <string name="all_sign_up">註冊</string>
    <string name="all_rm_calculator">RM 計算機</string>
    <string name="profile_info_height_unit">CM</string>
    <string name="profile_info_weight_unit">KG</string>
    <string name="profile_height_edit_hint">身高</string>
    <string name="profile_weight_edit_hint">體重</string>
    <string name="profile_info_edit_hint">個人簡介</string>
    <string name="add_new_article_title">標題：</string>
    <string name="add_new_article_content_hint">說點甚麼 &#8230;</string>
    <string name="all_start">開始</string>
    <string name="all_rest">休息</string>
    <string name="all_complete">完成</string>
    <string name="all_add">新增</string>
    <string name="add_new_schedule_title">項目：</string>
    <string name="add_new_schedule_weight">重量：</string>
    <string name="add_new_schedule_weight_hint">KG</string>
    <string name="add_new_schedule_reps">次數：</string>
    <string name="add_new_meal_cal">熱量：</string>
    <string name="add_new_meal_cal_hint">cal</string>
    <string name="add_new_meal_ingredient">食材：</string>
    <string name="add_new_meal_title">菜單：</string>
    <string name="date_article_title">單日課表與菜單</string>
    <string name="profile_article_date">MM 月 dd 日</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="com.crashlytics.useFirebaseAppId">true</string>
    <string name="title_network_check_dialog">請檢查網路連線。</string>
    <string name="title_force_update_dialog">有新版本！</string>
    <string name="message_force_update_dialog">請到 Google Play 下載最新版本，以利最佳體驗。</string>
    <string name="positive_button_force_update_dialog">更新</string>
    <string name="negative_button_force_update_dialog">晚點</string>
    <string name="login_network_fail_toast">登入失敗，請檢查網路連線。</string>
    <string name="default_personal_height">0</string>
    <string name="default_personal_weight">0</string>
    <string name="default_personal_info">在這裡輸入個人資訊。</string>
    <string name="login_fail_toast">登入失敗。</string>
    <string name="login_auth_fail_toast">認證失敗</string>
    <string name="login_success_toast">登入成功。</string>
    <string name="title_back_button_dialog">確定要離開此頁面？</string>
    <string name="positive_button_back_button_dialog">是</string>
    <string name="negative_button_back_button_dialog">否</string>
    <string name="title_leave_app_dialog">確定離開 Fitnessch？</string>
    <string name="positive_button_leave_app_dialog">是</string>
    <string name="negative_button_leave_app_dialog">否</string>

    <string-array name="calendar_title_month">
        <item>1 月</item>
        <item>2 月</item>
        <item>3 月</item>
        <item>4 月</item>
        <item>5 月</item>
        <item>6 月</item>
        <item>7 月</item>
        <item>8 月</item>
        <item>9 月</item>
        <item>10 月</item>
        <item>11 月</item>
        <item>12 月</item>
    </string-array>
</resources>
