<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/childfragment_addnewmeal"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/addnew_meal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:paddingTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="2dp"
        android:paddingBottom="15dp"
        android:textSize="16sp"
        android:textColor="@color/addnew_text_color"
        android:text="@string/add_new_meal_title"/>

    <EditText
        android:id="@+id/addnew_meal_title_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/addnew_meal_title"
        app:layout_constraintLeft_toRightOf="@+id/addnew_meal_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/addnew_meal_title"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/addnew_text_color"
        android:inputType="text"
        android:maxLines="1"
        android:visibility="invisible"
        android:background="@drawable/addnew_edittext_background"/>

    <AutoCompleteTextView
        android:id="@+id/addnew_meal_auto_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/addnew_meal_title"
        app:layout_constraintLeft_toRightOf="@+id/addnew_meal_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/addnew_meal_title"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/addnew_text_color"
        android:inputType="text"
        android:maxLines="1"
        android:background="@drawable/addnew_edittext_background">
        <!--<requestFocus/>-->
    </AutoCompleteTextView>

    <TextView
        android:id="@+id/addnew_meal_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addnew_meal_title"
        app:layout_constraintLeft_toLeftOf="@id/addnew_meal_title"
        android:layout_marginTop="10dp"
        android:paddingTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="2dp"
        android:paddingBottom="15dp"
        android:textSize="16sp"
        android:textColor="@color/addnew_text_color"
        android:text="@string/add_new_meal_ingredient"/>

    <EditText
        android:id="@+id/addnew_meal_ingredient_edittext"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/addnew_meal_ingredient"
        app:layout_constraintLeft_toRightOf="@id/addnew_meal_ingredient"
        app:layout_constraintBottom_toBottomOf="@+id/addnew_meal_ingredient"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:maxLines="1"
        android:inputType="text"
        android:textColor="@color/addnew_text_color"
        android:background="@drawable/addnew_edittext_background"/>

    <TextView
        android:id="@+id/addnew_meal_cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/addnew_meal_ingredient"
        app:layout_constraintRight_toLeftOf="@id/addnew_meal_cal_edittext"
        app:layout_constraintBottom_toBottomOf="@id/addnew_meal_ingredient"
        android:layout_marginStart="10dp"
        android:paddingTop="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="2dp"
        android:paddingBottom="15dp"
        android:textSize="16sp"
        android:textColor="@color/addnew_text_color"
        android:text="@string/add_new_meal_cal"/>

    <EditText
        android:id="@+id/addnew_meal_cal_edittext"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@+id/addnew_meal_title_edittext"
        app:layout_constraintTop_toTopOf="@+id/addnew_meal_cal"
        app:layout_constraintBottom_toBottomOf="@id/addnew_meal_cal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:inputType="number"
        android:maxLines="1"
        android:hint="@string/add_new_meal_cal_hint"
        android:textColorHint="@color/new_schedule_article_title_edit_color"
        android:textColor="@color/addnew_text_color"
        android:background="@drawable/addnew_edittext_background"/>

    <Button
        android:id="@+id/addnew_meal_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addnew_meal_ingredient_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:shadowRadius="8"
        android:shadowDy="8"
        android:shadowDx="3"
        android:shadowColor="@color/addnew_btn_shadow_color"
        android:elevation="@dimen/addnew_btn_elevation"
        android:translationZ="@dimen/addnew_btn_translationz"
        android:background="@drawable/addnew_btn_ripple"
        android:textColor="@color/addnew_text_color"
        android:visibility="invisible"
        android:textSize="14sp"
        android:text="@string/all_add"/>

    <ImageView
        android:id="@+id/addnew_meal_btn_iamge"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/addnew_meal_ingredient_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/add_btn_selector" />

    <View
        android:id="@+id/addnew_meal_separator"
        android:layout_width="320dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/addnew_meal_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:background="@color/white_70_transparent"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_addnew_meal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/addnew_meal_separator"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/addnew_meal_complete_btn"
        android:layout_width="@dimen/addnew_complete_btn_width"
        android:layout_height="@dimen/addnew_complete_btn_height"
        app:layout_constraintRight_toRightOf="@+id/addnew_meal_title_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:shadowRadius="8"
        android:shadowDy="8"
        android:shadowDx="3"
        android:shadowColor="@color/addnew_btn_shadow_color"
        android:elevation="@dimen/addnew_btn_elevation"
        android:translationZ="@dimen/addnew_btn_translationz"
        android:background="@drawable/addnew_btn_ripple"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="invisible"
        android:text="@string/all_complete"/>

    <ImageView
        android:id="@+id/addnew_meal_next_btn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintRight_toRightOf="@+id/addnew_meal_title_edittext"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/next_btn_selector" />

</android.support.constraint.ConstraintLayout>